--- a/JAVASCRIPT/funcAssignment.html
+++ b/JAVASCRIPT/funcAssignment.html
@@ -8,21 +8,28 @@
 <body>
     
     <script>
-        let arr = [2, 3, 4, 8, 0, 9, 7]
-        let num = 3;
 
-        function getElements(arr, num){
-            for(let i = 0; i< arr.length; i++){
-                if (arr[i] > num) {
-                    console.log(arr[i]);
-                }
+        // Qs1. Write a JavaScript function that returns array elements larger than a number.
+        // let arr = [2, 3, 4, 8, 0, 9, 7]
+        // let num = 3;
 
-                // console.log(arr[i]);
-            }
-        }
+        // function getElements(arr, num){
+        //     for(let i = 0; i< arr.length; i++){
+        //         if (arr[i] > num) {
+        //             console.log(arr[i]);
+        //         }
 
-        getElements(arr, num)
+        //         // console.log(arr[i]);
+        //     }
+        // }
 
+        // getElements(arr, num)
+
+
+
+        // Qs2. Write a JavaScript function to extract unique characters from a string.
+// Example: str = “abcdabcdefgggh”
+// ans = “abcdefgh”
 
     </script>
 </body>
