--- a/JAVASCRIPT/js_dom/jspart9.html
+++ b/JAVASCRIPT/js_dom/jspart9.html
@@ -4,14 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Js-part-9 Assignment</title>
+    <style>
+        /* .container{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 20px;
+            
+        }
+        .inr-container{
+            height: 400px;
+            width: 600px;
+            text-align: center;
+            border:1px solid black;
+            border-radius: 5%;
+        }
+        .btn{
+            padding:8px 15px;
+            font-weight: 700;
+        } */
+    </style>
 </head>
 <body>
-    <label for="text">Text: 
+    <!-- <label for="text">Text: 
 
         <input inputmode="numeric" pattern="[0-9]*" placeholder="Enter some text" id="inputText" autocomplete="on">
     </label>
-    <button type="submit" onclick="handleSubmit()">Submit</button>
+    <button type="submit" onclick="handleSubmit()">Submit</button> -->
+   
+    <!--randomcolor   -->
+    <!-- <div class="container">
+        <h1>Get a random color</h1>
+        <button class="btn">Genrate color</button>
+        <div class="inr-container">
+        </div>
+    </div> -->
 
+    
     <Script src="script.js"></Script>
 </body>
 </html>
