--- a/JAVASCRIPT/js_dom/js10/index.html
+++ b/JAVASCRIPT/js_dom/js10/index.html
@@ -4,8 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo-App</title>
+    <style>
+        body{
+            background-color: rgb(143, 214, 57);
+        }
+        .One{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap:10px;
+        }
+        ul>li>button{
+            background-color: red;
+            border-radius: 50%;
+            color: yellow;
+            text-decoration: double;
+        }
+    </style>
 </head>
-<body>
-    
+<body >
+    <div class="One">
+        <h1>Toto List App</h1>
+        <div>
+            <input type="text" name="" id="" placeholder="Enter your task">
+            <button>Add task</button>
+
+            <ul>
+                <li>Do code <button class="delete">X</button></li>
+            </ul>
+        </div>
+    </div>
+
+    <script>
+        // Selection Element
+        let inp = document.querySelector("input")
+        let btn = document.querySelector("button")
+        let list = document.querySelector("ul")
+
+        btn.addEventListener("click", (e)=>{
+            console.log(inp.value);
+            // Creating task
+            let task = document.createElement("li");
+            task.innerText = inp.value;
+            list.appendChild(task)
+            console.log(task);
+            inp.value = ""
+
+            let Delbtn = document.createElement("button")
+            Delbtn.classList.add("delete")
+            Delbtn.innerText = "X"
+            task.appendChild(Delbtn)
+            console.log(list);
+        })
+
+        let delBtns = document.querySelectorAll(".delete");
+
+        list.addEventListener("click", (event)=>{
+            console.log(event.target);
+            event.stopPropagation;
+
+            console.log("brtvgh");
+        })
+
+
+        
+
+
+    </script>
 </body>
 </html>
