--- a/simon_game/index.html
+++ b/simon_game/index.html
@@ -15,12 +15,12 @@
 
         <div class="btn-container">
             <div class="line-one">
-                <div type="button" class="btn red"></div>
-                <div type="button" class="btn yellow"></div>
+                <div type="button" class="btn red" id="red"></div>
+                <div type="button" class="btn yellow" id="yellow"></div>
             </div>
             <div class="line-two">
-                <div type="button" class="btn green"></div>
-                <div type="button" class="btn purple"></div>
+                <div type="button" class="btn green" id="green"></div>
+                <div type="button" class="btn purple" id="purple"></div>
             </div>
         </div>
     </div>
