game reset show score

--- a/simon_game/index.html
+++ b/simon_game/index.html
@@ -9,9 +9,13 @@
 <body>
     <div class="main-container">
         <h1>Simon Game</h1>
-        <em>
-            <h2>Press any key to start the game</h2>
-        </em>
+        
+            <marquee behavior="alternate" width="306px">
+               <h2><em>
+                   Press any key to start the game
+                </em></h2>
+            </marquee>
+       
 
         <div class="btn-container">
             <div class="line-one">
