--- a/html_CSS/prac/index.html
+++ b/html_CSS/prac/index.html
@@ -1,6 +1,6 @@
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,35 +33,77 @@
             cursor: pointer;
         }
     </style>
-</head>
 
+</head>
 <body>
+    <div>
+        <h1>Login form</h1>
+        <form action="">
+            <label for="uname">Username or Email:</label>
+            <input type="email" placeholder="Please enter your email">
+            <br><br>
+            <label for="pass">Password: </label>
+            <input type="password" name="" id="">
+            <br>
+            <input type="Submit" value="SignIn">
+            <br>
+            Or
+            Login with <a href="www.google.com">Google</a>
+        </form>
+    </div>
+
+
+
     <div class="main">
-        <h1>Registration form </h1>
-        <div class="container">
-            <form action="">
-                <label for="fname">First Name:</label>
-                <input type="text" name="fname" id="fname" placeholder="Enter your first name">
-                <br>
-                <label for="lname">Last Name:</label>
-                <input type="text" name="lname" id="lname" placeholder="Enter your Last name">
-                <br>
-                <label for="email">Email:</label>
-                <input type="email" name="email" id="email" placeholder="Email">
-                <br>
-                <label for="pass">Password:</label>
-                <input type="password" name="password" id="password" placeholder="Create your password">
-                <br>
-                <label for="rpass">Repeate password:</label>
-                <input type="password" name="repeate-password" id="repeate-password"
-                    placeholder="Re-Enter your password">
-                <br>
-                <div class="btn">
-                    <input type="button" value="Submit" id="Submit">
-                </div>
-            </form>
-        </div>
+
+        <h1>Student Registration form </h1>
+        
+        <form action="">
+            <label for="">Name</label>
+            <input type="text" placeholder="Enter your name">
+            <input type="button" value="Submit">
+            <input type="checkbox">
+            <input type="color"><br>
+            <label for="">DOB</label>
+            <input type="date">
+            <label for="">Today</label>
+            <input type="datetime-local"><br>
+            <label for="">Email</label>
+            <input type="email"><br>
+            <label for="">Aadhar</label>
+            <input type="file">
+            <input type="hidden">
+            <label for="">Photo</label>
+            <input type="image" src="../mini_css_project/photo.jpg" width="40">
+            <br>
+            <label for="">Current month</label>
+            <input type="month">
+            <br>
+            <label for="">Number</label>
+            <input type="number">
+            <br>
+            <label for="">Password:</label>
+            <input type="password">
+            <br>
+            <label for="gender">Gender:</label>
+            <input type="radio" name="gender" id="male" value="male">
+            <label for="male">Male</label>
+            <input type="radio" name="gender" id="female" value="female">
+            <label for="female">Female</label>
+            <br>
+            <input type="range" name="" id="">
+            <br>
+            <input type="reset" name="" id="">
+            <br>
+            <input type="submit"><br>
+            <label for="">Ph. No.</label>
+            <input type="tel" name="" id="">
+            <br>
+            Time
+            <input type="time" name="" id=""><br>
+            <input type="url" name="" id="">
+        </form>
     </div>
 </body>
 
-</html>
+</html> 
