--- a/html_CSS/prac/index.html
+++ b/html_CSS/prac/index.html
@@ -58,6 +58,9 @@
             
             <input type="range" name="" id="" min="0" max="20">
 
+            <label for="phone">Enter your phone number:</label>
+  <input type="tel" id="phone" name="phone" required pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+
 
             <input type="Submit" value="SignIn">
             <br>
