--- a/html_CSS/prac/index.html
+++ b/html_CSS/prac/index.html
@@ -55,7 +55,7 @@
        </ul>
     </section>
 
-    <!-- <div class="main">
+     <div class="main">
 
         
         <h1>form</h1>
@@ -106,7 +106,7 @@
 
 
 
-    </div> -->
+    </div>
 
     
 </body>
